Fix contact form spacing

--- a/public/styles/_hero.scss
+++ b/public/styles/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   height: 60vh;
   width: 100%;
-  margin-top: 60px;
+  margin-top: 50px;
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
